--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
     </nav>
 
     <div class="photo"></div>
+
+    <div class="mid-frame">
+        <div class="text">
+            Create Amazing photos
+        </div>
+        <div class="buttons">
+            <button class="btn1">Learn More</button>
+            <button class="btn2">Subscribe</button>
+        </div>
+    </div>
     
 </body>
 </html>
